[gd_scene load_steps=26 format=3 uid="uid://cu3uhb23wp1gb"]

[ext_resource type="Script" path="res://scenes/ui/menu.gd" id="1_f4s0f"]
[ext_resource type="FontFile" uid="uid://bgdrs10x0o12h" path="res://assets/fonts/AnglicanText.ttf" id="2_rtghm"]
[ext_resource type="Texture2D" uid="uid://dw8f3r2op42pi" path="res://assets/sprites/jeptiska-spritesheet4.png" id="3_kkovv"]
[ext_resource type="Texture2D" uid="uid://dhei58hi67ecv" path="res://assets/sprites/jesus.png" id="4_vuo2u"]
[ext_resource type="FontFile" uid="uid://boxuef2owck6r" path="res://assets/fonts/Jersey15-Regular.ttf" id="5_7gioc"]
[ext_resource type="Texture2D" uid="uid://df1r05tlcm114" path="res://assets/sprites/sun-spritesheet1.png" id="5_17g22"]
[ext_resource type="StyleBox" uid="uid://bdwb72jog3bdm" path="res://assets/styles/button_hover.tres" id="5_dwbsv"]
[ext_resource type="Texture2D" uid="uid://ccdko1frhei4y" path="res://assets/sprites/cloud-spritesheet1.png" id="6_1fef0"]
[ext_resource type="StyleBox" uid="uid://bpi3l4fddkpxl" path="res://assets/styles/button_normal.tres" id="6_wvaxu"]
[ext_resource type="Texture2D" uid="uid://bpo578uowxxw8" path="res://assets/sprites/devil_sprite.png" id="7_s4v21"]
[ext_resource type="Texture2D" uid="uid://b0dpyvili7ls8" path="res://assets/sprites/devil_sprite_2.png" id="8_lp7x5"]
[ext_resource type="Texture2D" uid="uid://bkgvdpkhq78j6" path="res://assets/sprites/background_paralax_1.png" id="9_w2lrk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_grc63"]
atlas = ExtResource("3_kkovv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qqci"]
atlas = ExtResource("3_kkovv")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qloiw"]
atlas = ExtResource("3_kkovv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2tos"]
atlas = ExtResource("3_kkovv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlbm3"]
atlas = ExtResource("3_kkovv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yrkhk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_grc63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qqci")
}],
"loop": true,
"name": &"jump",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qloiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2tos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlbm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2tos")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_dryy6"]
atlas = ExtResource("5_17g22")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p61pi"]
atlas = ExtResource("5_17g22")
region = Rect2(288, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_t3tgu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dryy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p61pi")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qi7xg"]
atlas = ExtResource("6_1fef0")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_11h5r"]
atlas = ExtResource("6_1fef0")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_slmbf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi7xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11h5r")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_fao17"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_s4v21")
}, {
"duration": 1.0,
"texture": ExtResource("8_lp7x5")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}]

[node name="Menu" type="Node2D"]
script = ExtResource("1_f4s0f")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 23.52
offset_top = 11.835
offset_right = 523.52
offset_bottom = 206.48
theme_override_colors/default_color = Color(0.909804, 0.654902, 0.137255, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/normal_font = ExtResource("2_rtghm")
theme_override_font_sizes/normal_font_size = 150
text = "Boží Soud"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="SettingsButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 180.0
offset_top = 342.935
offset_right = 485.0
offset_bottom = 429.935
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_hover_pressed_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_hover_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_pressed_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_focus_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_outline_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_fonts/font = ExtResource("5_7gioc")
theme_override_font_sizes/font_size = 27
theme_override_styles/focus = ExtResource("5_dwbsv")
theme_override_styles/disabled_mirrored = ExtResource("5_dwbsv")
theme_override_styles/disabled = ExtResource("5_dwbsv")
theme_override_styles/hover_pressed_mirrored = ExtResource("5_dwbsv")
theme_override_styles/hover_pressed = ExtResource("5_dwbsv")
theme_override_styles/hover_mirrored = ExtResource("5_dwbsv")
theme_override_styles/hover = ExtResource("5_dwbsv")
theme_override_styles/pressed_mirrored = ExtResource("5_dwbsv")
theme_override_styles/pressed = ExtResource("5_dwbsv")
theme_override_styles/normal_mirrored = ExtResource("6_wvaxu")
theme_override_styles/normal = ExtResource("6_wvaxu")
text = "Nastavení"

[node name="QuitButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 180.0
offset_top = 250.0
offset_right = 485.0
offset_bottom = 337.0
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_hover_pressed_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_hover_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_pressed_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_focus_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_outline_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_fonts/font = ExtResource("5_7gioc")
theme_override_font_sizes/font_size = 27
theme_override_styles/focus = ExtResource("5_dwbsv")
theme_override_styles/disabled_mirrored = ExtResource("5_dwbsv")
theme_override_styles/disabled = ExtResource("5_dwbsv")
theme_override_styles/hover_pressed_mirrored = ExtResource("5_dwbsv")
theme_override_styles/hover_pressed = ExtResource("5_dwbsv")
theme_override_styles/hover_mirrored = ExtResource("5_dwbsv")
theme_override_styles/hover = ExtResource("5_dwbsv")
theme_override_styles/pressed_mirrored = ExtResource("5_dwbsv")
theme_override_styles/pressed = ExtResource("5_dwbsv")
theme_override_styles/normal_mirrored = ExtResource("6_wvaxu")
theme_override_styles/normal = ExtResource("6_wvaxu")
text = "Ukončit hru"

[node name="PlayButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 87.0
offset_top = 425.64
offset_right = 255.0
offset_bottom = 473.64
scale = Vector2(3, 3)
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_hover_pressed_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_hover_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_pressed_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_focus_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_colors/font_outline_color = Color(0.25098, 0.164706, 0.0117647, 1)
theme_override_fonts/font = ExtResource("5_7gioc")
theme_override_font_sizes/font_size = 27
theme_override_styles/focus = ExtResource("5_dwbsv")
theme_override_styles/disabled_mirrored = ExtResource("5_dwbsv")
theme_override_styles/disabled = ExtResource("5_dwbsv")
theme_override_styles/hover_pressed_mirrored = ExtResource("5_dwbsv")
theme_override_styles/hover_pressed = ExtResource("5_dwbsv")
theme_override_styles/hover_mirrored = ExtResource("5_dwbsv")
theme_override_styles/hover = ExtResource("5_dwbsv")
theme_override_styles/pressed_mirrored = ExtResource("5_dwbsv")
theme_override_styles/pressed = ExtResource("5_dwbsv")
theme_override_styles/normal_mirrored = ExtResource("6_wvaxu")
theme_override_styles/normal = ExtResource("6_wvaxu")
text = "Hrát"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(75, 560)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_yrkhk")
animation = &"run"
autoplay = "run"
frame_progress = 0.304969

[node name="Jesus" type="Sprite2D" parent="."]
position = Vector2(802, 317)
scale = Vector2(7.79688, 7.79688)
texture = ExtResource("4_vuo2u")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
z_index = -4
position = Vector2(802, 96)
scale = Vector2(15, 15)
sprite_frames = SubResource("SpriteFrames_t3tgu")
autoplay = "default"
frame_progress = 0.91244

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="."]
z_index = -4
position = Vector2(802, 586)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_slmbf")
autoplay = "default"
frame_progress = 0.366188

[node name="Devil" type="AnimatedSprite2D" parent="."]
z_index = -1
position = Vector2(1085, 552)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_fao17")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.528667

[node name="BackgroundParalax1" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(429, 337)
scale = Vector2(10, 10)
texture = ExtResource("9_w2lrk")

[node name="CreatedByLabel" type="RichTextLabel" parent="."]
offset_left = 216.0
offset_top = 187.0
offset_right = 403.0
offset_bottom = 247.0
theme_override_colors/default_color = Color(0.670259, 0.417416, 0, 1)
bbcode_enabled = true
text = "By Dictator productions"

[connection signal="pressed" from="Control/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Control/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Control/PlayButton" to="." method="_on_button_pressed"]
